clusters/svc.pt.soeren.cloud/microbin/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microbin
  namespace: microbin
spec:
  hosts:
    - microbin.svc.pt.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: microbin
            port:
              number: 80
